src/index.css
:root {
  --tile-size: 40px;
}

html, body, #root, .main {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.board {
  display: grid;
  grid-template-rows: var(--tile-size) var(--tile-size) var(--tile-size) var(--tile-size), var(--tile-size) var(--tile-size) var(--tile-size) var(--tile-size) var(--tile-size) var(--tile-size);
  grid-template-columns: var(--tile-size) var(--tile-size) var(--tile-size) var(--tile-size), var(--tile-size) var(--tile-size) var(--tile-size) var(--tile-size) var(--tile-size) var(--tile-size);
}

.board-tile {
  width: var(--tile-size);
  height: var(--tile-size);
  display: flex;
  align-items: center;
  justify-content: center;
}

.immovable {
  -webkit-user-drag: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  z-index: 3;
}


.tile-modifier-circle {
  position: absolute;
  z-index: 11;
  cursor: pointer;
  border-radius: 50%;
  background-color: rgb(255, 255, 255);
  font-family: sans-serif;
  font-weight: bolder;
  width: 15px;
  height: 15px;
  text-align: center;
  text-justify: center;
  font-size: small;
  border: gray 1px solid;
}

.tile-modifier-archer {
  position: absolute;
  z-index: 10;
  cursor: pointer;
  background-color: rgba(127,127,127,0.75);
  width: 40px;
  height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.tile-modifier-archer > p {
  font-family: sans-serif;
  font-weight: bolder;
  font-size: 30px;
  color: red;
}

.winscreen {
  position: absolute;
  z-index: 100;
  cursor: not-allowed;
  background-color: rgba(127,127,127,0.1);
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.winscreen > p {
  font-family: sans-serif;
  font-size: 2in;
  font-weight: bold;
}

.finances {
  position: absolute;
  left: 200px;
}

.finances > p {
  font-family: sans-serif;
}

.shop-tile {
  position: absolute;
  z-index: 2;
  width: 40px;
  height: 40px;
  background-color: rgba(255, 255, 0, 0.705);
}
.shop-background {
  position: absolute;
  z-index: 1000;
  width: 100%;
  height: 200%;
  overflow: hidden;
  background-color: rgba(127,127,127,0.9);
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.shop {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.shop img {
  width: 50px;
  height: 50px;
  border: 5px solid black;
  cursor: pointer;
}

.shop-item {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 10px;
}

.shop-item > p {
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-weight: bold;
  text-align: center;
}

.shop-item-container {
  display: flex;
  align-items: center;
  gap: 20px;
}

